force-app/main/default/objects/Question__c/fields/Condition_Question__c.field-meta.xml
<CustomField>
    <fullName>Condition_Question__c</fullName>
    <label>Condition Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>