force-app/main/default/objects/Question__c/fields/Is_Conditional__c.field-meta.xml
<CustomField>
    <fullName>Is_Conditional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conditional</label>
    <type>Checkbox</type>
</CustomField>