force-app/main/default/objects/Question__c/fields/Picklist_Options__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Options__c</fullName>
    <label>Picklist Options</label>
    <type>TextArea</type>
</CustomField>