force-app/main/default/objects/Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Textarea</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Multiselect</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>CURRENCY</fullName>
            </value>
            <value>
                <fullName>DATETIME</fullName>
            </value>
            <value>
                <fullName>PERCENT</fullName>
            </value>
            <value>
                <fullName>TEXTAREA_LONG</fullName>
            </value>
            <value>
                <fullName>TEXTAREA_RICH</fullName>
            </value>
            <value>
                <fullName>ENCRYPTED</fullName>
            </value>
            <value>
                <fullName>TIME</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>ADDRESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>