force-app/main/default/objects/Question__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>